--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
   - docker run -e CI=true react-app-test npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "Docker React App"
+  env: "Dockerreactapp-env"
+  bucket_name: "elasticbeanstalk-us-east-2-764574955085"
+  bucket_path: "Docker React App"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
